RESOLVED FIXED250828
mix-blend-mode stop working on a fixed layer if resolution is too large
https://bugs.webkit.org/show_bug.cgi?id=250828
Summary mix-blend-mode stop working on a fixed layer if resolution is too large
Roland
Reported 2023-01-19 02:12:14 PST
Created attachment 464554 [details] video capture of the bug Hello, this bug happen on the last Safari (tested on ipad pro M1, macbook pro 2013 and mac mini 2018). This codepen show the bug happening : https://codepen.io/danoszz/pen/QWLKKOe (scroll to the red and enlarge your windows more than 1800 px) Any mix-blend-mode attached to a fixed or sticky element will stop working if the size of the window scale to much. Generally around 1800px wide. You need to reload the windows to get the blend working back. If the element position is static or relative, it's ok.
Attachments
video capture of the bug (7.06 MB, video/quicktime)
2023-01-19 02:12 PST, Roland
no flags
Roland
Comment 1 2023-01-19 02:20:57 PST
Another exemple : https://postcompany.co/
Radar WebKit Bug Importer
Comment 2 2023-01-26 02:13:20 PST
Roland
Comment 3 2023-12-15 08:46:16 PST
Still an issue on Safari 17.1 and Sonoma.
Simon Fraser (smfr)
Comment 4 2024-09-23 17:30:52 PDT
*** Bug 278813 has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 5 2024-09-23 17:32:05 PDT
*** Bug 258007 has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 6 2024-09-23 17:34:46 PDT
We lose the blend mode when the layer goes between tiled and non-tiled.
Simon Fraser (smfr)
Comment 7 2024-09-23 17:36:45 PDT
EWS
Comment 8 2024-09-24 09:21:54 PDT
Committed 284163@main (08a3623d456b): <https://commits.webkit.org/284163@main> Reviewed commits have been landed. Closing PR #34134 and removing active labels.
Simon Fraser (smfr)
Comment 9 2024-10-15 12:16:36 PDT
*** Bug 281425 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.