mix-blend-mode stop working on a fixed layer if resolution is too large https://bugs.webkit.org/show_bug.cgi?id=250828 rdar://104686540

Reviewed by Matt Woodrow.

When a composited layer goes between tiled and non-tiled mode, it would lose its blend mode.

Fix by adding `BlendModeChanged` to the list of dirty bits for things we update when the tiling
mode changes.

* LayoutTests/compositing/blend-mode/tiled-to-non-tiled-with-blend-mode-expected.html: Added.
* LayoutTests/compositing/blend-mode/tiled-to-non-tiled-with-blend-mode.html: Added.
* Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::changeLayerTypeTo):

Canonical link: https://commits.webkit.org/284163@main